--- a/ibsen.css
+++ b/ibsen.css
@@ -8,12 +8,12 @@ background-color: lightgreen}
 color:brown;
 background-color:lightblue;}
 
-.class1{
+.name_hilda{
     font-family: 'Times';
     color: rgb(241, 241, 82);
     font-size:20px;
 }
-.class2{
+.name_solness{
     font-family: 'Times';
     color:rgb(219, 27, 27);
     font-size:20px;
