--- a/ibsen.css
+++ b/ibsen.css
@@ -21,10 +21,22 @@ background-color:lightblue;}
 .class{
     border-style:  solid;
     color:red;
-    margin: 100px 13em 15pt 10%;
-    padding: 25px 25px 25px 25px;
+    border-collapse: collapse;
+    margin: 20px 13em 15pt 10%;
+    padding: 8px 8px 8px 8px;
     text-align: center;
 }
 .class tbody tr:nth-child(even){
     background-color: #f2f2f2;
+
+}
+
+.name_hilda:hover{
+    text-shadow: 3px 5px 4px rgb(85, 208, 194);
+    border: 3px solid #e94040;
+}
+
+.name_solness:hover{
+    text-shadow: 3px 5px 4px rgb(202, 208, 85);
+    border: 3px solid #e94040;
 }
